--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
@@ -60,7 +60,7 @@
 					#if(${hft_organization_trade_size} != 0)
 					<div class="c1">
 						机构对公账户<span>账号：**0000</span>
-						<div class="trip"><div>解释文字内容解释文字内容解释文字内容解释文字内容<b></b></div></div>
+						<div class="trip"><div>幼教机构在银行合法开立的对公账户<b></b></div></div>
 					</div>
 					<div class="c2">
 						<table>
@@ -81,7 +81,7 @@
 							<a href="${staticDomain}/trade/orgPayIndex.htm" class="btnA mr20">充值</a>
     						<a href="${staticDomain}/trade/orgCashIndex.htm" class="btnB">取现</a>
 						</div>
-						<div class="d2"><a href="" class="a_m1 mr20">资产明细</a><a href="#">自动理财设置</a><div class="trip"><div>解释文字内容解释文字内容解释文字内容解释文字内容<b></b></div></div></div>
+						<div class="d2"><a href="" class="a_m1 mr20">资产明细</a><div class="trip"><div>可设定固定期限或固定金额的申购或赎回<b></b></div></div></div>
 					</div>
 					#else
 					<div style="height:200px;background-color:#fff;margin-top:10px">
@@ -96,7 +96,7 @@
 					#if(${S_CUSTINFO.invtp} == "1")
     					#if(${hft_operator_trade_size} != 0)
     					<div class="c1">
-    						理财银行卡账号<div class="trip"><div>解释文字内容解释文字内容解释文字内容解释文字内容<b></b></div></div>
+    						理财银行卡账号<div class="trip"><div>仅可绑定授权经办人的银行卡进行快捷理财<b></b></div></div>
     						<div class="d1">
     							银行卡已添加<span class="cBlue">${hft_operator_trade_size}</span>张
     							<a href="${staticDomain}/setting/settingCard.htm">查看全部</a>
@@ -122,8 +122,8 @@
     							<a href="${staticDomain}/trade/pay_index.htm" class="btnA mr20">充值</a>
     							<a href="${staticDomain}/trade/cash_index.htm" class="btnB">取现</a>
     						</div>
-    						<div class="d2"><a href="#" class="btn-query a_m1 mr20">资产明细</a><a href="${staticDomain}/trade/pay_index.htm">自动理财设置</a>
-    						<div class="trip"><div>解释文字内容解释文字内容解释文字内容解释文字内容<b></b></div></div></div>
+    						<div class="d2"><a href="#" class="btn-query a_m1 mr20">资产明细</a><a href="${staticDomain}/setting/autoTrade_index.htm">自动理财设置</a>
+    						<div class="trip"><div>可设定固定期限或固定金额的申购或赎回<b></b></div></div></div>
     					</div>
 						#else
 							<div style="height:200px;background-color:#fff;margin-top:10px">
@@ -162,7 +162,7 @@
     							<a href="${staticDomain}/trade/pay_index.htm" class="btnA mr20">充值</a>
     							<a href="${staticDomain}/trade/cash_index.htm" class="btnB">取现</a>
     						</div>
-    						<div class="d2"><a href="#" class="btn-query a_m1 mr20">资产明细</a><a href="${staticDomain}/trade/pay_index.htm">自动理财设置</a>
+    						<div class="d2"><a href="#" class="btn-query a_m1 mr20">资产明细</a><a href="${staticDomain}/setting/autoTrade_index.htm">自动理财设置</a>
     						<div class="trip"><div>解释文字内容解释文字内容解释文字内容解释文字内容<b></b></div></div></div>
     					</div>
 						#else
