--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/autoFundStepP3.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/autoFundStepP3.vm
@@ -14,7 +14,7 @@ $(function(){
 <div class="body">
     <div class="inner container-step">
 		<form id="form-autoTrade-result" class="common-form" action="${ufbDomain}/setting/autoTradePause_result.htm" method="post">
-        <div class="step-title clearfix">修改自动充值计划<a class="link link-underline fr" href="${staticDomain}/setting/autoTrade_index.htm">&lt;&lt;自动充值设置</a></div>
+        <div class="step-title clearfix">修改自动充值计划<a class="link link-underline fr" href="${staticDomain}/setting/autoTrade_index.htm">&lt;&lt;自动充值计划</a></div>
         <div class="step-tabs tabs-step3 clearfix">
             <a class="tab fl" href="javascript:;">自动充值（修改）</a>
             <a class="tab fl" href="javascript:;">预览自动充值计划（修改）</a>
