--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_0_setting.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_0_setting.vm
@@ -60,7 +60,10 @@
 <script>
 $(function(){
 	$("#logout").on("click",function(){
-		window.location.href = "${ufbDomain}/cust/logout.htm";
+		window.location.href = "${staticDomain}/cust/logout.htm";
+	});
+	$(".b2>span").on("click",function(){
+		window.location.href = "${staticDomain}/setting/settingAccount.htm";
 	});
 });
 </script>
