--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
@@ -173,7 +173,7 @@ $(function(){
 				<li><a href="${staticDomain}/setting/settingAccount.htm">账户信息</a></li>
                 <li><a class="current" href="${staticDomain}/setting/settingPassword.htm">密码设置</a></li>
                 <li><a href="${staticDomain}/setting/settingCard.htm">银行卡管理</a></li>
-                <li><a href="${staticDomain}/setting/autoTrade_index.htm">自动理财设置</a></li>
+                <li><a href="${staticDomain}/help/helpNotice.htm">帮助</a></li>
             </ul>
         </div>
         <div class="main fr">
