--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_0_error.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_0_error.vm
@@ -62,5 +62,8 @@ $(function(){
 	$("#logout").on("click",function(){
 		window.location.href = "${ufbDomain}/cust/logout.htm";
 	});
+	$(".b2>span").on("click",function(){
+		window.location.href = "${staticDomain}/setting/settingAccount.htm";
+	});
 });
 </script>
