--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/autoFundStepP1.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/autoFundStepP1.vm
@@ -55,21 +55,21 @@ $(function(){
                         </li>
 						<li>
                             <span class="form-title">充值金额</span>
-                            <input id="autoamt-display" disabled name="autoamt-display" class="ipt-autoamt input-text" maxlength="11" type="text" value="$!{AutoTradeVo.autoamt}">元
-							<input id="autoamt" name="autoamt" class="ipt-autoamt input-text" maxlength="11" type="hidden" value="$!{AutoTradeVo.autoamt}">元								
+                            <input id="autoamt-display" disabled name="autoamt-display" style="background-color:#ddd" class="ipt-autoamt input-text" maxlength="11" type="text" value="$!{AutoTradeVo.autoamt}">元
+							<input id="autoamt" name="autoamt" class="ipt-autoamt input-text" maxlength="11" type="hidden" value="$!{AutoTradeVo.autoamt}">							
                             <span class="tips-normal">请填写充值金额</span>
                             <span id="appamtTips" class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
                         <li>
                             <span class="form-title">设置充值时间</span>
-							每月<input id="dat-display" disabled name="dat-display" class="ipt-dat input-short" maxlength="2" type="text" value="$!{AutoTradeVo.dat}">日
+							每月<input id="dat-display" disabled name="dat-display" style="background-color:#ddd" class="ipt-dat input-short" maxlength="2" type="text" value="$!{AutoTradeVo.dat}">日
 								<input id="dat" name="dat" class="ipt-dat input-short" maxlength="2" type="hidden" value="$!{AutoTradeVo.dat}">
                             <span class="tips-normal"></span>
                             <span class="tips-check"><i class="icon"></i>验证提示</span>
                         </li>
 						<li>
                             <span class="form-title">备注</span>
-                            <input id="summary-display" disabled name="summary-display" class="ipt-summary input-text" maxlength="50" type="text" value="$!{AutoTradeVo.summary}">
+                            <input id="summary-display" disabled name="summary-display" style="background-color:#ddd" class="ipt-summary input-text" maxlength="50" type="text" value="$!{AutoTradeVo.summary}">
 							<input id="summary" name="summary" class="ipt-summary input-text" maxlength="50" type="hidden" value="$!{AutoTradeVo.summary}">
                             <span class="tips-normal">如：收费理财、闲置资金</span>
                             <span id="appamtTips" class="tips-check"><i class="icon"></i>验证提示</span>
