--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingAccount.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingAccount.vm
@@ -26,9 +26,9 @@ $(function(){
         <div class="main fr">
             <div class="setting-content">
                 <ul>
-					#if(${CustinfoVo.level} != 0)
-                    <li>幼教机构：$!{CustinfoVo.organization}</li>
-                    <li>营业执照注册号：$!{CustinfoVo.business}</li>
+					#if(${CustinfoVo.invtp} != 0)
+                    <li>幼教机构：$!{CustinfoVo.orgnm}</li>
+                    <li>营业执照注册号：$!{CustinfoVo.orgbusiness}</li>
 					#end
                     <li>
 						#if(${CustinfoVo.level} != 0)
