--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
@@ -76,6 +76,7 @@ $(function(){
 	});
 	#end
 	// btn-getMsgCode
+	var countDown;
 	$("#btn-getMsgCode").on("click",function(){
         $.ajax({
      		type: "GET",
