--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/public/head.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/public/head.vm
@@ -21,4 +21,5 @@
 	<script type="text/javascript" src="${staticDomain}/public/js/plupload.full.min.js"></script>
     <script type="text/javascript" src="${staticDomain}/public/js/plug.js"></script><!--自定义插件-->
     <script type="text/javascript" src="${staticDomain}/public/js/global.js"></script><!--全局设置-->
+    <script type="text/javascript" src="${staticDomain}/public/js/highcharts.js"></script>
 </head>
