--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
@@ -43,7 +43,7 @@
 			<div class="nav">
 				<a href="${staticDomain}/cust/session.htm" class="active">我的幼富通</a>
     			<a href="#" onclick="alert('建设中，敬请期待。。。')">学费通</a>
-    			<a href="${staticDomain}/cust/session.htm">幼富宝</a>
+    			<a href="${staticDomain}/ufb/indexPage.htm">幼富宝</a>
     			<a href="#" onclick="alert('建设中，敬请期待。。。')">幼富盈</a>
     			<a href="#" onclick="alert('建设中，敬请期待。。。')">幼富贷</a>
 			</div>
