--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/ufb/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/ufb/indexPage.vm
@@ -43,15 +43,17 @@
             <a href="${staticDomain}/home/index.htm" class="logo"></a>
 			<div class="nav">
 				<a href="${staticDomain}/cust/session.htm">我的幼富通</a>
-				<a href="#">学费通</a>
-				<a href="${staticDomain}/cust/custUfb.htm" class="active">幼富宝</a>
-				<a href="#">幼富盈</a>
-				<a href="#">幼富贷</a>
+				<a href="#"  onclick="alert('建设中，敬请期待。。。')">学费通</a>
+				<a href="${staticDomain}/ufb/indexPage.htm" class="active">幼富宝</a>
+				<a href="#"  onclick="alert('建设中，敬请期待。。。')">幼富盈</a>
+				<a href="#"  onclick="alert('建设中，敬请期待。。。')">幼富贷</a>
 			</div>
         </div>
     </div>
     
     <div id="body">
+		<form id="form" method="post" action="${staticDomain}/cust/index.htm">
+			<input type="hidden" id="serialno" name="serialno" value="">
         <div class="container">
 			<div class="a1">幼富宝</div>
 			<div class="a2">
@@ -80,7 +82,13 @@
 							<a href="${staticDomain}/trade/orgPayIndex.htm" class="btnA mr20">充值</a>
 							<a href="${staticDomain}/trade/orgCashIndex.htm" class="btnB">取现</a>
 						</div>
-						<div class="d2"><a href="#">自动理财设置</a><div class="trip"><div>可设定固定期限或固定金额的申购或赎回<b></b></div></div></div>
+						<div class="d2"><a href="${staticDomain}/setting/autoTrade_index.htm">自动理财设置</a><div class="trip"><div>可设定固定期限或固定金额的申购或赎回<b></b></div></div></div>
+					</div>
+					#else
+					<div style="height:200px;background-color:#fff;margin-top:10px">
+						<div style="padding-top:100px;padding-left:180px">
+						<a id="btn-openAccount4org" href="#" >注册机构账户</a>
+						</div>
 					</div>
 					#end	
 					#end
@@ -115,7 +123,7 @@
 							<a href="${staticDomain}/trade/orgPayIndex.htm" class="btnA mr20">充值</a>
 							<a href="${staticDomain}/trade/orgCashIndex.htm" class="btnB">取现</a>
 						</div>
-						<div class="d2"><a href="#">自动理财设置</a><div class="trip"><div>可设定固定期限或固定金额的申购或赎回<b></b></div></div></div>
+						<div class="d2"><a href="${staticDomain}/setting/autoTrade_index.htm">自动理财设置</a><div class="trip"><div>可设定固定期限或固定金额的申购或赎回<b></b></div></div></div>
 					</div>
 						#else
 							<div style="height:200px;background-color:#fff;margin-top:10px">
@@ -173,7 +181,7 @@
 			
 			<div class="a3 mt15 mb30">
 				<div class="b1">
-					<div class="c1">资金明细<a href="#">查看更多</a></div>
+					<div class="c1">资金明细<a id="btn-queryIndex" href="#">查看更多</a></div>
 					<div class="c2">
 						<table>
 							<tr>
@@ -246,6 +254,7 @@
 			</div>
         </div>
     </div>
+	</form>
 </div>
 <div class="footer footer-simple">
     <div class="inner clearfix">
@@ -274,8 +283,27 @@ $(function(){
 		$("#form").attr("action", "../bankcard/addBankCard1.htm");
 		$("#form").submit();
 	});
+	$("#btn-openAccount4org").on("click",function(){
+		$("#form").attr("action", "../org/openAccoStep1.htm");
+		$("#form").submit();
+	});
 	$("#btn-openAccount4family").on("click",function(){
 		$("#form").attr("action", "../bankcard/addBankCard1.htm");
+		$("#form").submit();
+	});
+    $("#logout").on("click",function(){
+		$("form").attr("action", "../cust/logout.htm");
+		$("form").submit();
+	});
+	
+    $(".link").on("click",function(){
+		$("#serialno").val($(this).attr("serialno"));
+		$("#form").attr("action", "../trade/query_detail.htm");
+		$("#form").submit();
+	});
+		
+	$("#btn-queryIndex").on("click",function(){
+		$("#form").attr("action", "../trade/query_index.htm");
 		$("#form").submit();
 	});
 
