--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/pay_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/pay_index.vm
@@ -51,7 +51,7 @@
                             <div class="input-options">
                                 <div class="card-list clearfix">
 									#foreach($card in $cardList)
-                                    <a class="card" href="javascript:;" 
+                                    <a class="card card-select" href="javascript:;" 
 										tradeacco="${card.tradeacco}">
 										#set($tailStr=$card.bankacco)
 										#set($start=$tailStr.length() - 4)
@@ -127,7 +127,7 @@
 		});
 		
 		// 点击银行卡
-		$(".card").on("click", function(){
+		$(".card.card-select").on("click", function(){
 			$("#tradeacco").val($(this).attr("tradeacco"));
 		});
 		
