--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/ufb/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/ufb/indexPage.vm
@@ -235,19 +235,22 @@
 											<a serialno="${tradeRequest.serialno}" class="link" href="javascript:;">查看</a>
 										</td>
                                     </tr>
-    								#end
+								#end
+								
+								
 						</table>
 					</div>
 				</div>
 				<div class="b2">
 					<div class="c1">收益看板</div>
 					<div class="c2 tabs">
-						<div class="tabsNav"><a href="#">7日年化收益率（%）</a><a href="#">万份收益（元）${hftFundInfo.income}</a></div>
+						<div class="tabsNav"><a href="#" id="showYield"></a><a href="#" id="showIncome"></a></div>
 						<div class="tabsCon" href="javascript:;">日年化收益率</div>
 						<div class="tabsCon" href="javascript:;">万份收益</div>
 					  <div class="panels chart-panels">
                          <div id="chart-syl" class="panel slide-in" style="width: 100%; height: 150px"></div>
 						 <div id="chart-sy" class="panel slide-out" style="width: 100%; height: 150px"></div>
+						 
                       </div>
 					</div>
 				</div>
@@ -306,6 +309,9 @@ $(function(){
 		$("#form").attr("action", "../trade/query_index.htm");
 		$("#form").submit();
 	});
+	
+	$("#showYield").html("7日年化收益率（"+ parseFloat('${hftFundInfo.yield}').toFixed(4) +"%）");
+	$("#showIncome").html("万份收益（元）"+ parseFloat('${hftFundInfo.income}').toFixed(4) +"");
 
 });
 </script>
@@ -315,6 +321,7 @@ $(function(){
 
 $(function(){
 	$('.tabs').tabs();
+	
    $('#chart-syl').highcharts({
             chart: {
             },
@@ -326,7 +333,9 @@ $(function(){
             },
             xAxis: {
                 categories: [
-				'05/25', '05/26', '05/27', '05/28', '05/29', '05/30','05/31'
+				#foreach($nav in $hftNavList)
+				'$nav.date.substring(4,6)/$nav.date.substring(6,8)',
+				#end
 				]
             },
             yAxis: {
@@ -344,7 +353,9 @@ $(function(){
                 name: '',
                 data: 
 				[
-				1.22, 1.22, 1.30, 1.25, 1.26, 1.26, 1.28
+				#foreach($nav in $hftNavList)
+				$nav.yield,
+				#end
 				]
             }]
         });
@@ -356,7 +367,11 @@ $(function(){
                 enabled: false
             },
             xAxis: {
-                categories: ['05/25', '05/26', '05/27', '05/28', '05/29', '05/30','05/31']
+                categories: [
+				#foreach($nav in $hftNavList)
+				'$nav.date.substring(4,6)/$nav.date.substring(6,8)',
+				#end
+                ]
 
             },
             yAxis: {
@@ -372,7 +387,12 @@ $(function(){
             },
             series: [{
                 name: '',
-                data: [1.22, 1.22, 1.30, 1.25, 1.26, 1.26, 2.28]
+				data: 
+				[
+			  #foreach($nav in $hftNavList)
+				$nav.income,
+				#end
+			]
             }]
         });
  
