--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/error/user_error.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/error/user_error.vm
@@ -1,16 +1,53 @@
-<div style="text-align: center; padding-top: 180px; padding-bottom: 200px;">
-    <h1 style="color:red;font-size:24px">$!{errorMsg}</h1>
-    <!--
-	<p>您的申请提交失败，请重新操作，如始终无法提交申请可联系幼富通客服热线！</p>
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
+    <title>幼富通 - 绑定流程</title>
+	<!--
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel='stylesheet' href='css/camera.css'>
+    <link rel="stylesheet" href="css/common.css">
 	-->
-	<p style="blue;font-size:16px;">
-		您的申请
-		<span style="color:red;font-size:24px">
-		“$!{actionName}”
-        </span>
-		提交失败，请重新操作，如始终无法提交申请可联系幼富通客服热线！
-	</p>
-	#if(${returnUrl})
-    <input style="margin-top:4px" onclick="window.location.href='${ufbDomain}/${returnUrl}'" type="button" value="再试一次">
-    #end
-</div>
+    <!--[if lt IE 9]>
+    <script type="text/javascript" src="./libs/html5.js"></script>
+    <![endif]-->
+	<!--
+    <script type='text/javascript' src='libs/jquery.min.js'></script>
+    <style type="text/css">
+        .title.clearfix{
+            margin-top:0;
+        }
+    </style>
+	-->
+
+</head>
+<body>
+    <div class="body">
+        <div class="inner container-find">
+<!--
+            <div class="find-tabs tabs-step3 clearfix">
+                <a class="tab fl" href="javascript:;">1-验证身份</a>
+                <a class="tab fl" href="javascript:;">2-银行卡绑定</a>
+                <a class="tab fl on" href="javascript:;">3-开通结果</a>
+            </div>
+-->
+           <div class="title clearfix" style="margin-top:0;">
+                <h2 class="title-main fl">${message}</h2>
+            </div>
+            <div class="find-panels">
+                <div class="panel">
+                    <div class="form-done">
+                        <div class="title" style="margin-top:0;background:transparent">交易密码错误！</div>
+                        <a class="btn" href="javascript:;">返回</a>
+                        <div class="tips">
+                        	<p>温馨提示：</p>
+							<p>你的交易申请提交失败，请确认密码后重新操作，或联系幼富通客服热线</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </style>
+</body>
+</html>
